modifi-css_todo

--- a/css/todo.css
+++ b/css/todo.css
@@ -7,7 +7,7 @@
   }
   
   .toDo_button {
-    margin-right: 10px;
+    margin-left: 10px;
     cursor: pointer;
     background: none;
     border:none;
